[package]
name = "libdifbuilder"
version = "0.1.0"
authors = ["RandomityGuy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "difbuilder"
path = "src/lib.rs"

[dependencies]
libdif = { path = "../libdif" }
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.175", features = ["derive"] }
cgmath = "0.17.0"
rand = "0.8.5"
itertools = "0.11.0"
rayon = "1.7.0"
image = "0.25.1"
rectangle-pack = "0.4.2"
arrayvec = "0.7.4"
nalgebra = "0.33.2"
