[package]
name = "dif-derive"
version = "0.1.0"
authors = ["HiGuy Smith <higuymb@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.2"
quote = "1.0.1"
proc-macro2 = "1.0"
